# image-ocr-sam-skill

./: .gitignore  SKILL.md  skill-manager.toml
cli/: README.md  pyproject.toml
cli/src/vision_toolbelt/: caption.py  cli.py  detect.py  document.py  model_catalog.py  ocr.py  overlay.py  screenshot.py  segment.py  toolspec.py  utils.py
references/: agent-integration.md  model-catalog.toml  output-schema.json
skill-scripts/: install-models.sh  install-vision-toolbelt.sh
