[project]
name = "vision-toolbelt"
version = "0.1.0"
description = "Local-first CLI for OCR, image understanding, boxes, overlays, screenshots, and segmentation artifacts for coding agents."
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "pillow>=10.0.0",
  "huggingface-hub>=0.23.0"
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
paddle = ["paddleocr>=2.7.0"]
vision = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "transformers>=4.50.0,<5",
  "accelerate>=0.29.0",
  "timm>=0.9.0",
  "einops>=0.7.0",
  "safetensors>=0.4.0"
]
yolo = ["ultralytics>=8.3.0"]
sam = ["segment-anything>=1.0"]
all = [
  "pytesseract>=0.3.10",
  "paddleocr>=2.7.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "transformers>=4.50.0",
  "accelerate>=0.29.0",
  "timm>=0.9.0",
  "einops>=0.7.0",
  "safetensors>=0.4.0",
  "ultralytics>=8.3.0",
  "segment-anything>=1.0"
]

[project.scripts]
vision-toolbelt = "vision_toolbelt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
